--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
-    <title>TEST</title>
+    <!-- <link rel="stylesheet" href="views/style.css"> -->
+    <title>나아라</title>
+
+    <style>
+        body {
+            max-width: 500px;
+            margin: 0 auto;
+            background-color: aliceblue;
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
+    </style>
 </head>
+
 <body>
-    <h3>TEST</h3>
+    <h3><a href="/">나아라</a></h3>
+    <hr>
+    <ul>
+        <li><a href="/openapi">건강보험심사평가원 OpenAPI</a></li>
+    </ul>
 </body>
+
 </html>
