--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,11 @@
     <ul>
         <li><a href="/openapi">건강보험심사평가원 OpenAPI</a></li>
     </ul>
+
+    <form method="GET" action="/">
+        <input type="text" name="sidoCdNm" id="sidoCdNm" placeholder="시도명을 입력하세요." required>
+        <input type="submit" value="검색">
+    </form>
 </body>
 
 </html>
