--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,15 @@
             border: 1px solid gray;
             max-width: 500px;
             min-height: 300px;
-            margin-top: 10px;
+            margin: 10px 0;
+        }
+        .hospital {
+            border: 1px solid gray;
+            border-collapse: collapse;
+            width: 500px;
+        }
+        .hospital .index, .hospital .name, .hospital .addr {
+            padding: 5px;
         }
     </style>
 </head>
@@ -33,12 +41,22 @@
     </ul>
 
     <form method="GET" action="/">
-        <input type="text" name="emdong" id="emdong" placeholder="시도명을 입력하세요." required>
+        <input type="text" name="emdong" id="emdong" placeholder="읍/면/동을 입력하세요." required>
         <input type="submit" value="검색">
     </form>
 
     <div class="search_result">
-
+        <% for(var i = 0; i < data.length; i++) {%>
+            <table class="hospital">
+                <tr>
+                    <td class="index"><%= data[i].인덱스 %></td>
+                    <td class="name"><%= data[i].병원명 %></td>
+                </tr>
+                <tr>
+                    <td class="addr" colspan="2"><%= data[i].주소 %></td>
+                </tr>
+            </table>
+        <% } %>
     </div>
 </body>
 
