--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,27 +8,47 @@
 
     <style>
         body {
-            max-width: 500px;
+            width: 60%;
+            min-width: 750px;
             margin: 0 auto;
             background-color: aliceblue;
+            color: rgb(63, 63, 63);
         }
         a {
             text-decoration: none;
-            color: black;
+            color: rgb(63, 63, 63);
         }
-        .search_result {
+        #search_input {
+            width: 80%;
+            height: 23px;
+        }
+        .btn {
+            background-color: white;
             border: 1px solid gray;
-            max-width: 500px;
-            min-height: 300px;
-            margin: 10px 0;
+            padding: 5px;
+            width: 70px;
+            font-weight: 600;
         }
-        .hospital {
+        .hospital_table {
             border: 1px solid gray;
             border-collapse: collapse;
-            width: 500px;
+            width: 100%;
+            min-width: 500px;
         }
-        .hospital .index, .hospital .name, .hospital .addr {
-            padding: 5px;
+        .hospital_table tr {
+            border: 1px solid gray;
+            height: 50px;
+        }
+        .hospital_table .index {
+            width: 30px;
+        }
+        .hospital_table .name {
+            width: 200px;
+            border-right: 1px solid gray;
+            border-left: 1px solid gray;
+        }
+        .hospihospital_tabletal .addr {
+            width: auto;
         }
     </style>
 </head>
@@ -41,22 +61,20 @@
     </ul>
 
     <form method="GET" action="/">
-        <input type="text" name="emdong" id="emdong" placeholder="읍/면/동을 입력하세요." required>
-        <input type="submit" value="검색">
+        <input type="text" name="emdong" id="search_input" placeholder="읍/면/동을 입력하세요." required>
+        <input type="submit" class="btn" value="검색">
     </form>
 
     <div class="search_result">
-        <% for(var i = 0; i < data.length; i++) {%>
-            <table class="hospital">
+        <table class="hospital_table">
+        <% for(var i = 0; i < data.length; i++) { %>
                 <tr>
                     <td class="index"><%= data[i].인덱스 %></td>
                     <td class="name"><%= data[i].병원명 %></td>
-                </tr>
-                <tr>
                     <td class="addr" colspan="2"><%= data[i].주소 %></td>
                 </tr>
-            </table>
         <% } %>
+        </table>
     </div>
 </body>
 
