--- a/views/mypage/mypage.ejs
+++ b/views/mypage/mypage.ejs
@@ -23,6 +23,7 @@
                         <%= result.createdAt.toLocaleDateString() %>
                     </div>
                     <div class="card-text mb-2"><%= result.description %></div>
+                    <a href="/mypage/pages/<%= result.slug %>" class="btn btn-primary">Read More</a>
                 </div>
             </div>
         <% }) %>
