sanitizedHtml (mark down)

--- a/views/mypage/show.ejs
+++ b/views/mypage/show.ejs
@@ -20,7 +20,7 @@
         <a href="/mypage/edit" class="btn btn-info">Edit</a>
 
         <div>
-            <%= results.markdown %>
+            <%- results.sanitizedHtml %>
         </div>
     </div>
 </body>
