--- a/views/mypage/edit.ejs
+++ b/views/mypage/edit.ejs
@@ -12,16 +12,11 @@
 
 <body>
     <div class="container">
-        <h1 class="mb-1"><%= results.title %></h1>
-        <div class="text-muted mb-2">
-            <%= results.createdAt.toLocaleDateString() %>
-        </div>
-        <a href="/mypage" class="btn btn-secondary">Mypage</a>
-        <a href="/mypage/edit/<%= results.id %>" class="btn btn-info">Edit</a>
+        <h2 class="mb-4">Edit</h2>
 
-        <div>
-            <%- results.sanitizedHtml %>
-        </div>
+        <form action="/mypage/edit/<%= results.id %>?_method=PUT" method="POST">
+            <%- include('_form_fields') %>
+        </form>
     </div>
 </body>
 
