--- a/views/mypage/mypage.ejs
+++ b/views/mypage/mypage.ejs
@@ -24,6 +24,7 @@
                     </div>
                     <div class="card-text mb-2"><%= result.description %></div>
                     <a href="/mypage/show/<%= result.slug %>" class="btn btn-primary">Read More</a>
+                    <a href="/mypage/edit/<%= result.id %>" class="btn btn-info">Edit</a>
                     <form action="/mypage/del/<%= result.id %>?_method=DELETE" method="POST" class="d-inline">
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
