--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -12,16 +12,13 @@
 
 <body>
     <div class="container">
-        <h2 class="mb-4">관리자 페이지</h2>
+        <h2 class="mb-4"><a href="/admin">Admin</a></h2>
         <a href="/" class="btn btn-dark">메인 페이지</a>
-        <a href="/admin/hospitals" class="btn btn-info">병원API</a>
-        <form action="/admin/hospitals" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">Open API Reload</button>
-        </form>
+        <a href="/admin/hospitals" class="btn btn-info">데이터베이스</a>
 
             <div class="card mt-4">
                 <div class="card-body">
-                    <h4 class="card-title">title</h4>
+                    <h4 class="card-title">name</h4>
                     <div class="card-subtitle text-muted mb-2">
                         2022.01.16
                     </div>
