--- a/views/admin/hospitals.ejs
+++ b/views/admin/hospitals.ejs
@@ -98,13 +98,45 @@
         </form>
         <form action="/admin/hospitals/26" method="POST" class="d-inline">
             <button type="submit" class="btn btn-danger">예방의학과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/50" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">구강악안면외과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/51" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">치과보철과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/52" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">치과교정과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/53" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">소아치과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/54" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">치주과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/55" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">치과보존과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/56" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">구강내과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/57" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">영상치의학과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/58" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">구강병리과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/59" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">예방치과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/61" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">통합치의학과 Reload</button>
         </form> -->
 
-        <!-- 여기서부터 시작 -->
         <form action="/admin/hospitals/5" method="POST" class="d-inline">
             <button type="submit" class="btn btn-danger"> Reload</button>
         </form>
-
+        
         <% results.forEach((result) => { %>
             <div class="card mt-4">
                 <div class="card-body">
