--- a/views/admin/hospitals.ejs
+++ b/views/admin/hospitals.ejs
@@ -18,7 +18,7 @@
         <a href="/admin/json" class="btn btn-primary">JSON 형태로 보기</a>
 
         <br><br>
-        <!-- <form action="/admin/hospitals/00" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals/00" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">일반의 Reload</button>
         </form>
         <form action="/admin/hospitals/01" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
@@ -51,6 +51,7 @@
         <form action="/admin/hospitals/10" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">산부인과 Reload</button>
         </form>
+        
         <form action="/admin/hospitals/11" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">소아청소년과 Reload</button>
         </form>
@@ -99,6 +100,7 @@
         <form action="/admin/hospitals/26" method="POST" class="d-inline">
             <button type="submit" class="btn btn-danger">예방의학과 Reload</button>
         </form>
+
         <form action="/admin/hospitals/50" method="POST" class="d-inline">
             <button type="submit" class="btn btn-danger">구강악안면외과 Reload</button>
         </form>
@@ -131,10 +133,34 @@
         </form>
         <form action="/admin/hospitals/61" method="POST" class="d-inline">
             <button type="submit" class="btn btn-danger">통합치의학과 Reload</button>
-        </form> -->
+        </form>
 
-        <form action="/admin/hospitals/5" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger"> Reload</button>
+        <form action="/admin/hospitals/80" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">한방내과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/81" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">한방부인과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/82" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">한방소아과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/83" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">한방안이비인후 피부과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/84" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">한방신경정신과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/85" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">침구과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/86" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">한방재활의학과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/87" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">사상체질과 Reload</button>
+        </form>
+        <form action="/admin/hospitals/88" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">한방응급 Reload</button>
         </form>
         
         <% results.forEach((result) => { %>
