change dgsbjtCd to zipCd

--- a/views/admin/hospitals.ejs
+++ b/views/admin/hospitals.ejs
@@ -18,149 +18,29 @@
         <a href="/admin/json" class="btn btn-primary">JSON 형태로 보기</a>
 
         <br><br>
-        <form action="/admin/hospitals/00" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">일반의 Reload</button>
+        <form action="/admin/hospitals/2010" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">종합병원 Reload</button>
         </form>
-        <form action="/admin/hospitals/01" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">내과 Reload</button>
+        <form action="/admin/hospitals/2030" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">병원 Reload</button>
         </form>
-        <form action="/admin/hospitals/02" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">신경과 Reload</button>
+        <form action="/admin/hospitals/2040" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">요양병원 Reload</button>
         </form>
-        <form action="/admin/hospitals/03" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">정신건강의학과 Reload</button>
+        <form action="/admin/hospitals/2050" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">치과 Reload</button>
         </form>
-        <form action="/admin/hospitals/04" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">외과 Reload</button>
+        <form action="/admin/hospitals/2060" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">한방 Reload</button>
         </form>
-        <form action="/admin/hospitals/05" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">정형외과 Reload</button>
+        <form action="/admin/hospitals/2070" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">의원 Reload</button>
         </form>
-        <form action="/admin/hospitals/06" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">신경외과 Reload</button>
+        <form action="/admin/hospitals/2080" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">보건기관 Reload</button>
         </form>
-        <form action="/admin/hospitals/07" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">흉부외과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/08" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">성형외과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/09" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">마취통증의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/10" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">산부인과 Reload</button>
-        </form>
-        
-        <form action="/admin/hospitals/11" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">소아청소년과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/12" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">안과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/13" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">이비인후과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/14" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">피부과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/15" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">비뇨의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/16" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">영상의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/17" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">방사선종양학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/18" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">병리과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/19" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">진단검사의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/20" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">결핵과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/21" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">재활의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/22" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">핵의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/23" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">가정의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/24" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">응급의학과 Reload</button>
-        </form>
-            <form action="/admin/hospitals/25" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
-            <button type="submit" class="btn btn-danger">직업환경의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/26" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">예방의학과 Reload</button>
-        </form>
-
-        <form action="/admin/hospitals/50" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">구강악안면외과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/51" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">치과보철과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/52" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">치과교정과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/53" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">소아치과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/54" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">치주과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/55" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">치과보존과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/56" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">구강내과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/57" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">영상치의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/58" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">구강병리과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/59" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">예방치과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/61" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">통합치의학과 Reload</button>
-        </form>
-
-        <form action="/admin/hospitals/80" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">한방내과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/81" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">한방부인과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/82" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">한방소아과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/83" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">한방안이비인후 피부과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/84" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">한방신경정신과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/85" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">침구과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/86" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">한방재활의학과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/87" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">사상체질과 Reload</button>
-        </form>
-        <form action="/admin/hospitals/88" method="POST" class="d-inline">
-            <button type="submit" class="btn btn-danger">한방응급 Reload</button>
+        <form action="/admin/hospitals/2090" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+            <button type="submit" class="btn btn-danger">조산원 Reload</button>
         </form>
         
         <% results.forEach((result) => { %>
@@ -173,7 +53,6 @@
                     </div>
                     <div class="card-text mb-2"><%= result.addr %></div>
                     <a href="/admin/hospitals/<%= result._id %>" class="btn btn-outline-primary">자세히 보기</a>
-                    <!-- <a href="/admin/hospitals/<%= result._id %>" class="btn btn-outline-info">수정</a> -->
                     <form action="/admin/hospitals/<%= result._id %>?_method=DELETE" method="POST" class="d-inline" onsubmit="if(!confirm('해당 병원 데이터를 삭제하시겠습니까?')){return false;}">
                         <button type="submit" class="btn btn-outline-danger">삭제</button>
                     </form>
