--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
     <title>admin</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <style>
         a {
             text-decoration: none;
@@ -39,6 +41,36 @@
                     <div class="form-group">
                         <label for="search_input">병원이름</label>
                         <input required value="<%= results.title %>" type="text" name="seacrh_input" id="seacrh_input" class="form-control">
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="card mt-4">
+            <div class="card-body">
+                <form action="" method="GET">
+                    <div class="input-group mb-3">
+                        <select name="symptom_level" lass="custom-select" id="inputGroupSelect01">
+                            <option selected>증상 정도</option>
+                            <option value="1">매우 아픔</option>
+                            <option value="2">조금 아픔</option>
+                            <option value="3">보통</option>
+                            <option value="4">약한 증상</option>
+                            <option value="5">의심 증상</option>
+                        </select>
+                        <select name="symptom" class="custom-select" id="inputGroupSelect01">
+                            <option selected>증상 선택</option>
+                            <option value="headache">머리가 아파요</option>
+                            <option value="eye">눈이 흐릿해요</option>
+                            <option value="tongue_inflammation">혀에 염증이 생겼어요</option>
+                            <option value="cough">기침이 나요</option>
+                            <option value="kneel">무릎이 저려요</option>
+                            <option value="stuffy_nose">코가 막혀요</option>
+                            <option value="toothache">이가 아파요</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="d-inline btn btn-info">검색</button>
                     </div>
                 </form>
             </div>
