delete search form using hospital name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,25 +30,6 @@
         <div class="card mt-4">
             <div class="card-body">
                 <form action="" method="GET">
-                    <!-- <div class="form-group">
-                        <select name="search_type">
-                            <option value="name">병원명</option>
-                        </select>
-                    </div> -->
-                    <div class="form-group">
-                        <button type="submit" class="d-inline btn btn-info">검색</button>
-                    </div>
-                    <div class="form-group">
-                        <label for="search_input">병원이름</label>
-                        <input required value="<%= results.title %>" type="text" name="seacrh_input" id="seacrh_input" class="form-control">
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <div class="card mt-4">
-            <div class="card-body">
-                <form action="" method="GET">
                     <div class="input-group mb-3">
                         <select name="symptom_level" lass="custom-select" id="inputGroupSelect01">
                             <option selected>증상 정도</option>
@@ -60,11 +41,11 @@
                         </select>
                         <select name="symptom" class="custom-select" id="inputGroupSelect01">
                             <option selected>증상 선택</option>
-                            <option value="head">머리가 아파요</option>
-                            <option value="eye">눈이 이상해요</option>
-                            <option value="bone">뼈가 부러졌어요</option>
-                            <option value="nose">코가 막혀요</option>
-                            <option value="tooth">이가 아파요</option>
+                            <option>머리가 아파요</option>
+                            <option>눈이 이상해요</optiond>
+                            <option>뼈가 부러졌어요</option>
+                            <option>코가 막혀요</option>
+                            <option>이가 아파요</option>
                             <!-- <option selected>증상 선택</option>
                             <option value="headache">머리가 아파요</option>
                             <option value="eye">눈이 흐릿해요</option>
