change the options & del commented options

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,19 +41,11 @@
                         </select>
                         <select name="symptom" class="custom-select" id="inputGroupSelect01">
                             <option selected>증상 선택</option>
-                            <option>머리가 아파요</option>
-                            <option>눈이 이상해요</optiond>
-                            <option>뼈가 부러졌어요</option>
-                            <option>코가 막혀요</option>
-                            <option>이가 아파요</option>
-                            <!-- <option selected>증상 선택</option>
-                            <option value="headache">머리가 아파요</option>
-                            <option value="eye">눈이 흐릿해요</option>
-                            <option value="tongue_inflammation">혀에 염증이 생겼어요</option>
-                            <option value="cough">기침이 나요</option>
-                            <option value="kneel">무릎이 저려요</option>
-                            <option value="stuffy_nose">코가 막혀요</option>
-                            <option value="toothache">이가 아파요</option> -->
+                            <option>머리 아픔</option>
+                            <option>눈 이상</optiond>
+                            <option>뼈 부러짐</option>
+                            <option>코 막힘</option>
+                            <option>이 아픔</option>
                         </select>
                     </div>
                     <div class="form-group">
